Implement wav, mp4, mp3 download and search